--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,14 @@
     />
 
     <!-- Custom styles for this template -->
-    <link href="./css/signin.css" rel="stylesheet" />
+    <link href="./assets/css/signin.css" rel="stylesheet" />
   </head>
   <body class="text-center">
     <main class="form-signin">
       <form id="frmLogin" name="frm-Login" method="POST">
         <img
           class="mb-4"
-          src="./img/catovatechCasalocaliza.svg"
+          src="./assets/img/catovatechCasalocaliza.svg"
           alt=""
           width="92"
           height="auto"
@@ -65,6 +65,5 @@
         <p class="mt-5 mb-3 text-muted">&copy;CatovaTech 2017–2021</p>
       </form>
     </main>
-    <script src="./index.js" type="module"></script>
   </body>
 </html>
